--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+    @apply inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-pg-white-50 rounded-lg bg-background-500 sm:w-auto hover:bg-background-600 focus:ring-4 focus:ring-gray-100;
+  }
+  p {
+    @apply max-w-2xl mb-6 font-light text-pg-700 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400;
+  }
+
+  h1 {
+    @apply max-w-2xl mb-4 text-4xl text-primary-900 font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl dark:text-white;
   }
 }
 
-*/
