--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <section>
     <div class="grid max-w-screen-xl px-4 pt-20 pb-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 lg:pt-28">
         <div class="mr-auto place-self-center lg:col-span-7">
-            <h1 class="max-w-2xl mb-4 text-4xl text-primary-900 font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl dark:text-white">Make reaching your <br> savings goals fun.</h1>
-            <p class="max-w-2xl mb-6 font-light text-pg-700 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Here are the reasons to use my amazing savings app.</p>
+            <h1>Make reaching your <br> savings goals fun.</h1>
+            <p>Here are the reasons to use my amazing savings app.</p>
             <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
-                <%= link_to 'Start saving', root_path , class: "inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-pg-white-50 rounded-lg bg-background-300 sm:w-auto hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800" %>
+                <%= link_to 'Start saving', root_path , class: "btn-primary" %>
             </div>
         </div>
         <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
