--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600&family=Open+Sans:wght@300;400&family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body class="bg-background-50 m-0">
+    <%= render 'shared/navbar' %>
     <main class="container mx-auto mt-28 px-5 flex justify-center">
       <%= yield %>
     </main>
